@@ -1,3 +1,7 @@
+2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 
+
+	* Compiler/GNUCompiler.cs: Use string.Join instead of custom method.
+
 2008-02-09  Mike Krüger <mkrueger@novell.com> 
 
 	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Removed source editor
